--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -365,7 +365,7 @@ font-size: 18px;
 <tr>
 <td>Tuesday</td>
 <td><a href="https://sta210-sp21.netlify.app/slides/02-multivar-relationships.html">Exploring multivariable relationships</a></td>
-<td>Exploring multivariable relationships</td>
+<td><a href="https://warpwire.duke.edu/w/zRkFAA/">Exploring multivariable relationships</a></td>
 <td>AE 02</td>
 </tr>
 <tr>
@@ -385,10 +385,10 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td>Introduction to Modern Statistics (IMS) <a href="https://openintro-ims.netlify.app/inference-num.html#one-mean-math">Section 7.1.2</a></td>
+<td><a href="https://openintro-ims.netlify.app/inference-num.html#one-mean-math">Introduction to Modern Statistics (IMS) Section 7.1.2</a></td>
 </tr>
 <tr>
-<td>IMS <a href="https://openintro-ims.netlify.app/inference-num.html#differenceOfTwoMeans">Section 7.2 - 7.4</a></td>
+<td><a href="https://openintro-ims.netlify.app/inference-num.html#differenceOfTwoMeans">IMS Section 7.2 - 7.4</a></td>
 </tr>
 </tbody>
 </table>
