add lec 03 video 1

--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -371,8 +371,14 @@ font-size: 18px;
 <tr>
 <td>Thursday</td>
 <td>Statistical inference review</td>
-<td>Statistical inference review</td>
+<td><a href="https://warpwire.duke.edu/w/_xkFAA/">Statistical inference review Part 1</a></td>
 <td>AE 03</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+<td>Statistical inference review Part 2</td>
+<td></td>
 </tr>
 </tbody>
 </table>
