--- a/public/slides/03-inference-review.html
+++ b/public/slides/03-inference-review.html
@@ -324,7 +324,7 @@ class: middle, center
 ## # A tibble: 1 x 2
 ##      mu sigma
 ##   &lt;dbl&gt; &lt;dbl&gt;
-## 1  16.7  14.1
+## 1  16.7  14.0
 ```
 ]
 
@@ -349,7 +349,7 @@ samp_1
 ## # A tibble: 1 x 1
 ##   x_bar
 ##   &lt;dbl&gt;
-## 1  18.4
+## 1  14.7
 ```
 
 ---
@@ -373,7 +373,7 @@ samp_2
 ## # A tibble: 1 x 1
 ##   x_bar
 ##   &lt;dbl&gt;
-## 1  15.1
+## 1  14.3
 ```
 ---
 
@@ -396,7 +396,7 @@ samp_3
 ## # A tibble: 1 x 1
 ##   x_bar
 ##   &lt;dbl&gt;
-## 1  15.8
+## 1  16.9
 ```
 
 --
@@ -418,7 +418,7 @@ keep repeating...
 ## # A tibble: 1 x 2
 ##    mean    se
 ##   &lt;dbl&gt; &lt;dbl&gt;
-## 1  16.6  2.01
+## 1  16.7  2.02
 ```
 
 ---
@@ -827,6 +827,13 @@ t.test(abb$ppg, mu = 80) %&gt;%
 - Hypothesis test to test a claim about a population parameter
 
 - Confidence interval to estimate a population parameter
+
+
+---
+
+## Acknowledgements
+
+These slides were adapted from
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
