--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -412,7 +412,7 @@ font-size: 18px;
 <td><strong>due Sun, Jan 31 at 11:59p EST</strong></td>
 </tr>
 <tr>
-<td>Complete All About You survey</td>
+<td>Complete <a href="https://duke.qualtrics.com/jfe/form/SV_czLvjD7M9XkcZKK">All About You survey</a></td>
 <td><strong>due Sun, Jan 31 at 11:59p EST</strong></td>
 </tr>
 </tbody>
