Add lab instructions.

--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -370,7 +370,7 @@ font-size: 18px;
 </tr>
 <tr>
 <td>Thursday</td>
-<td>Statistical inference review</td>
+<td><a href="https://sta210-sp21.netlify.app/slides/03-inference-review.html">Statistical inference review</a></td>
 <td><a href="https://warpwire.duke.edu/w/_xkFAA/">Statistical inference review Part 1</a></td>
 <td>AE 03</td>
 </tr>
@@ -408,7 +408,7 @@ font-size: 18px;
 </thead>
 <tbody>
 <tr>
-<td>Lab 01</td>
+<td><a href="https://sta210-sp21.netlify.app/labs/lab-01-ikea.html">Lab 01</a></td>
 <td><strong>due Sun, Jan 31 at 11:59p EST</strong></td>
 </tr>
 <tr>
