--- a/public/schedule/index.html
+++ b/public/schedule/index.html
@@ -391,15 +391,13 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right">Week 02</td>
             <td align="right" style="width:25%;text-align:right">Mon, Jan 25 </td>
-            <td style="width:40%;text-align:left">Lab 01</td>
+            <td style="width:40%;text-align:left">Lab 01: Getting started with R!</td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-laptop fa-lg"></i></font>
             </td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="far fa-file-code fa-lg"></i></font>
-            </td>
+            <td align="center" style="width:10%;text-align:center"><a href="/labs/lab-01-ikea.html">
+                    <i class="far fa-file-code fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="fas fa-edit fa-lg"></i></font>
@@ -440,11 +438,10 @@ table tbody tr:nth-child(odd){
         <tr>
                                  <td align="left" style="width:15%;text-align:right"></td>
             <td align="right" style="width:25%;text-align:right">Thu, Jan 28</td>
-            <td style="width:40%;text-align:left">Inference review</td>
-            <td align="center" style="width:10%;text-align:center">
-                <font color="f1f1f1">
-                    <i class="fas fa-laptop fa-lg"></i></font>
-            </td>
+            <td style="width:40%;text-align:left">Statistical inference review</td>
+            <td align="center" style="width:10%;text-align:center"><a
+                    href="/slides/03-inference-review.html">
+                    <i class="fas fa-laptop fa-lg"></i></a></td>
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
                     <i class="far fa-file-code fa-lg"></i></font>
