update week 02 materials

--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -377,7 +377,7 @@ font-size: 18px;
 <tr>
 <td></td>
 <td></td>
-<td>Statistical inference review Part 2</td>
+<td><a href="https://warpwire.duke.edu/w/ERwFAA/">Statistical inference review Part 2</a></td>
 <td></td>
 </tr>
 </tbody>
