--- a/public/slides/03-inference-review.html
+++ b/public/slides/03-inference-review.html
@@ -324,7 +324,7 @@ class: middle, center
 ## # A tibble: 1 x 2
 ##      mu sigma
 ##   &lt;dbl&gt; &lt;dbl&gt;
-## 1  16.7  14.0
+## 1  16.6  14.0
 ```
 ]
 
@@ -349,7 +349,7 @@ samp_1
 ## # A tibble: 1 x 1
 ##   x_bar
 ##   &lt;dbl&gt;
-## 1  14.7
+## 1  16.4
 ```
 
 ---
@@ -373,7 +373,7 @@ samp_2
 ## # A tibble: 1 x 1
 ##   x_bar
 ##   &lt;dbl&gt;
-## 1  14.3
+## 1  13.3
 ```
 ---
 
@@ -396,7 +396,7 @@ samp_3
 ## # A tibble: 1 x 1
 ##   x_bar
 ##   &lt;dbl&gt;
-## 1  16.9
+## 1  17.8
 ```
 
 --
@@ -418,7 +418,7 @@ keep repeating...
 ## # A tibble: 1 x 2
 ##    mean    se
 ##   &lt;dbl&gt; &lt;dbl&gt;
-## 1  16.7  2.02
+## 1  16.6  2.02
 ```
 
 ---
@@ -616,7 +616,12 @@ Does the data provide sufficient evidence that the mean price per guest per nigh
 
 --
 
-**Note**: We define the hypotheses **&lt;u&gt;before&lt;/u&gt;** analyzing the data.
+- We define the hypotheses **&lt;u&gt;before&lt;/u&gt;** analyzing the data.
+
+- We will assume the null hypothesis is true and assess the strength of evidence **&lt;u&gt;against&lt;/u&gt;** the null hypohtesis. 
+
+
+
 
 ---
 
@@ -660,9 +665,15 @@ $$ t = \frac{\bar{X} - \mu_0}{\mathbf{s}/\sqrt{n}} = \frac{76.587 - 80}{50.141 /
 
 .eq[
 `$$\text{p-value} = P(|t| \geq |\text{test statistic}|)$$`
+
+Calculated from a `\(t\)` distribution with `\(n-1\)` degrees of freedom. 
 ]
 
-Calculated from a `\(t\)` distribution with `\(n-1\)` degrees of freedom
+
+
+--
+
+The p-value is the probability of observing a test statistic at least as extreme as the one we've observed, given the null hypothesis is true.
 
 ---
 
@@ -730,9 +741,9 @@ class: middle, center
 .middle[
 .eq[
 
-Confidence interval for `\(\bar{X}\)`
+Confidence interval for `\(\mu\)`
 
-`$$\bar{X} \pm t^* \times \frac{\sigma}{\sqrt{n}}$$`
+`$$\bar{X} \pm t^* \times \frac{s}{\sqrt{n}}$$`
 ]
 ]
 
@@ -742,7 +753,7 @@ Confidence interval for `\(\bar{X}\)`
   
 ---
 
-## Calculating the 95% CI for `\(\bar{X}\)`
+## Calculating the 95% CI for `\(\mu\)`
 
 
 |  x_bar|     sd|  n|
@@ -833,7 +844,7 @@ t.test(abb$ppg, mu = 80) %&gt;%
 
 ## Acknowledgements
 
-These slides were adapted from
+Some slides were adapted from [Data Science in a Box](datasciencebox.org).
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
