--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -366,7 +366,7 @@ font-size: 18px;
 <td>Tuesday</td>
 <td><a href="https://sta210-sp21.netlify.app/slides/02-multivar-relationships.html">Exploring multivariable relationships</a></td>
 <td><a href="https://warpwire.duke.edu/w/zRkFAA/">Exploring multivariable relationships</a></td>
-<td>AE 02</td>
+<td><a href="https://sta210-sp21.netlify.app/appex/ae-02-bikeshare.html">AE 02: Bike rentals in DC</a></td>
 </tr>
 <tr>
 <td>Thursday</td>
