--- a/public/appex/ae-02-bikeshare.html
+++ b/public/appex/ae-02-bikeshare.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2021-01-25" />
+<meta name="date" content="2021-01-26" />
 
 <title>AE 02: Bike rentals in DC</title>
 
@@ -386,7 +386,7 @@ summary {
 
 <h1 class="title toc-ignore">AE 02: Bike rentals in DC</h1>
 <h3 class="subtitle">Exploring multivariable relationships</h3>
-<h4 class="date">2021-01-25</h4>
+<h4 class="date">2021-01-26</h4>
 
 </div>
 
@@ -401,6 +401,21 @@ summary {
 <li>Complete <a href="https://duke.qualtrics.com/jfe/form/SV_czLvjD7M9XkcZKK">All About You survey</a> by Sun, Jan 31 at 11:59p</li>
 </ul></li>
 <li>Check Sakai announcements + email for weekly updates</li>
+</ul>
+</div>
+<div id="introductions" class="section level2">
+<h2>Introductions</h2>
+</div>
+<div id="meet-your-classmates-5-minutes" class="section level2">
+<h2>Meet your classmates! (~ 5 minutes)</h2>
+<ul>
+<li>Go to a breakout room</li>
+<li>Introduce yourself!
+<ul>
+<li>Name</li>
+<li>Year</li>
+<li>What is something you’re looking forward to this semester (either in this class or in general)?</li>
+</ul></li>
 </ul>
 </div>
 <div id="questions-about-the-class" class="section level2">
