--- a/static/appex/ae-02-bikeshare.html
+++ b/static/appex/ae-02-bikeshare.html
@@ -435,12 +435,13 @@ summary {
 <li>From <a href="http://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset">UCI Machine Learning Repository - Bike Sharing Dataset</a></li>
 </ul>
 </div>
-<div id="exercises" class="section level2">
-<h2>Exercises</h2>
+<div id="exercises-15-minutes" class="section level2">
+<h2>Exercises (~ 15 minutes)</h2>
 <ul>
 <li><p>Go to the <a href="https://www.github.com/sta210-sp21">STA 210 course organization</a> on GitHub.</p></li>
 <li><p>Clone the <strong>ae-02-</strong> repo and start a new project in RStudio.</p></li>
 <li><p>Be sure to push your changes periodically as you work on the AE.</p></li>
+<li><p>Write your breakout room’s answer on the Google Slide. Link will be posted in chat.</p></li>
 </ul>
 </div>
 
