add jan 28 docs

--- a/public/schedule/week-02/index.html
+++ b/public/schedule/week-02/index.html
@@ -372,7 +372,7 @@ font-size: 18px;
 <td>Thursday</td>
 <td><a href="https://sta210-sp21.netlify.app/slides/03-inference-review.html">Statistical inference review</a></td>
 <td><a href="https://warpwire.duke.edu/w/_xkFAA/">Statistical inference review Part 1</a></td>
-<td>AE 03</td>
+<td><a href="https://sta210-sp21.netlify.app/appex/ae-03-bikeshare-pt2.html">AE 03: Bike rentals in DC cont&rsquo;d</a></td>
 </tr>
 <tr>
 <td></td>
