--- a/public/appex/check-ins.html
+++ b/public/appex/check-ins.html
@@ -70,6 +70,67 @@ class: center, middle, inverse, title-slide
 &lt;/font&gt;
 ]
 ]
+
+---
+
+### If you could have these superpowers, which one would you choose?
+
+&lt;!-- From https://slidelizard.com/en/blog/icebreaker-polls --&gt; 
+
+&lt;br&gt;
+
+.center[
+.col-3[
+
+&lt;font class = "large-emoji"&gt;
+1) 👀 
+&lt;/font&gt;
+
+Be invisible anytime
+
+
+&lt;br&gt;
+&lt;br&gt;
+
+&lt;font class = "large-emoji"&gt;
+4) 💪
+&lt;/font&gt;
+
+Superhuman Strength
+]
+
+.col-3[
+
+&lt;font class = "large-emoji"&gt;
+2) 🐶
+&lt;/font&gt;
+
+Talk to animals
+
+&lt;br&gt;
+&lt;br&gt;
+
+&lt;font class = "large-emoji"&gt;
+5) 🧠
+&lt;/font&gt;
+
+Read minds
+
+
+]
+
+.col-3[
+&lt;font class = "large-emoji"&gt;
+3) 🦅
+&lt;/font&gt;
+
+Be able to fly
+
+&lt;br&gt;
+&lt;br&gt;
+
+]
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
